[gd_scene load_steps=11 format=3 uid="uid://bw0f4ajltweur"]

[ext_resource type="Theme" uid="uid://b7xxrd3l5ge4" path="res://Interface/Default.tres" id="1_sfc82"]
[ext_resource type="Script" path="res://Interface/Config/Config.gd" id="2_a168m"]
[ext_resource type="Texture2D" uid="uid://be2cjsfpvhpo5" path="res://Interface/Config/Gardiant.tres" id="3_i1nm1"]
[ext_resource type="StyleBox" uid="uid://bh61l13juroto" path="res://Interface/GreenBox.tres" id="4_vqy40"]
[ext_resource type="PackedScene" uid="uid://bffx0x6dbsyhl" path="res://Interface/Config/SliderPanel/SliderControl.tscn" id="4_yin4w"]
[ext_resource type="StyleBox" uid="uid://cfexaqjldss46" path="res://Interface/Config/RedBox.tres" id="5_qegy6"]

[sub_resource type="Curve" id="Curve_41tgb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.5488, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_y47lm"]
curve = SubResource("Curve_41tgb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q0yin"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(960, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 200.0
initial_velocity_max = 600.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_y47lm")
color = Color(0.201693, 0.057, 0.38, 0.74902)
turbulence_enabled = true

[sub_resource type="LabelSettings" id="LabelSettings_04hbc"]
font_size = 128

[node name="Config" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sfc82")
script = ExtResource("2_a168m")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_i1nm1")

[node name="Control" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="GPUParticles2D" type="GPUParticles2D" parent="Background/Control"]
position = Vector2(0, 32)
amount = 128
process_material = SubResource("ParticleProcessMaterial_q0yin")

[node name="Options" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnContinue" type="Button" parent="Options/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 72)
layout_mode = 2
theme_override_styles/normal = ExtResource("4_vqy40")
text = "Continue"

[node name="BtnGameplay" type="Button" parent="Options/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 72)
layout_mode = 2
text = "Gameplay"

[node name="BtnGraphics" type="Button" parent="Options/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 72)
layout_mode = 2
text = "Graphics"

[node name="BtnAudio" type="Button" parent="Options/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 72)
layout_mode = 2
text = "Audio"

[node name="BtnKeybindings" type="Button" parent="Options/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 72)
layout_mode = 2
text = "Keybindings"

[node name="BtnQuit" type="Button" parent="Options/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 72)
layout_mode = 2
theme_override_styles/normal = ExtResource("5_qegy6")
text = "Quit"

[node name="ScrollContainer" type="ScrollContainer" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Options/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Options/HBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Gameplay" type="VBoxContainer" parent="Options/HBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Graphics" type="VBoxContainer" parent="Options/HBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Audio" type="VBoxContainer" parent="Options/HBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Master" parent="Options/HBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Audio" instance=ExtResource("4_yin4w")]
layout_mode = 2
focus_neighbor_left = NodePath("../../../../../VBoxContainer/BtnAudio")
focus_neighbor_bottom = NodePath("../Sound")
focus_next = NodePath("../Sound")
focus_previous = NodePath("../../../../../VBoxContainer/BtnAudio")
signal_name = "audio_master"

[node name="Sound" parent="Options/HBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Audio" instance=ExtResource("4_yin4w")]
layout_mode = 2
signal_name = "audio_sound"

[node name="Music" parent="Options/HBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Audio" instance=ExtResource("4_yin4w")]
layout_mode = 2
signal_name = "audio_music"

[node name="Ambiance" parent="Options/HBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Audio" instance=ExtResource("4_yin4w")]
layout_mode = 2
signal_name = "audio_ambiance"

[node name="Keybinds" type="VBoxContainer" parent="Options/HBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="GameOver" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOver/VBoxContainer"]
layout_mode = 2
text = "Game Over..."
label_settings = SubResource("LabelSettings_04hbc")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GameOver/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 72)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("4_vqy40")
text = "New Game"

[node name="Button2" type="Button" parent="GameOver/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 72)
layout_mode = 2
size_flags_horizontal = 3
text = "Reload"

[node name="Button3" type="Button" parent="GameOver/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 72)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("5_qegy6")
text = "Quit"

[connection signal="pressed" from="Options/HBoxContainer/VBoxContainer/BtnContinue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/VBoxContainer/BtnGameplay" to="." method="_on_gameplay_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/VBoxContainer/BtnGraphics" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/VBoxContainer/BtnAudio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/VBoxContainer/BtnKeybindings" to="." method="_on_keybindings_pressed"]
[connection signal="pressed" from="Options/HBoxContainer/VBoxContainer/BtnQuit" to="." method="_on_quit_pressed"]
